feat: builder-style channel API feat: renderer feature API (replies, companion) feat: revamped private messages feature feat: various enhancements to the injection API feat: channels can now have an alias parameter fix: setting 'floodFilter' should depend on the global filter fix(discordsrv): cancellation state is not passed into the chat sender method